...
    buffer.writeln();
    buffer.writeln('Origin: ${breed.origin}');
    buffer.writeln('Temperament: ${breed.temperament}');
    buffer.writeln('Life Span: ${breed.lifeSpan}');
    buffer.writeln('Weight: ${breed.weight}');
    buffer.writeln();
    buffer.writeln('Description:');
    buffer.writeln(breed.description);
    
    if (breed.isRare) {
      buffer.writeln();
      buffer.writeln('🌟 This is a rare breed!');
    }
...
